fixing dark mode

--- a/resources/kanban.css
+++ b/resources/kanban.css
@@ -432,8 +432,9 @@ a {
 }
 
 .pref-input {
-  border: 1px solid black;
+  border: 1px solid #999;
   padding: 3px;
+  background-color: transparent;
 }
 
 
@@ -448,11 +449,19 @@ a {
   .canvas,
   .sidebar,
   .sidelist,
-  .header {
+  .header,
+  .pref-input {
     background-color: #111;
     color: #fff;
   }
 
+  .eisenhower-inner {
+    background-color: #444;
+  }
+
+  .B .eisenhower-inner, .D .eisenhower-inner {
+    background-color: #333;
+  }
   .sidebar-container,
   .canvas {
     background-color: #222;
